* implemented the swipe to delete feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_green">#DFECDB</color>
     <color name="blue">#5D9CEC</color>
+    <color name="red">#EC4B4B</color>
 </resources>
