* implemented the task checking mechanism

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="light_green">#DFECDB</color>
     <color name="blue">#5D9CEC</color>
     <color name="red">#EC4B4B</color>
+    <color name="green">#61E757</color>
 </resources>
