--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -29,7 +29,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_delete_24"/>
+                android:src="@drawable/ic_delete_24"
+                android:contentDescription="@string/same_description"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -44,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="16dp"
-            android:background="@color/white">
+            android:background="@drawable/shape_task_draggable_view">
 
             <View
                 android:id="@+id/divider"
